post页面回复时间

--- a/templates/index.html
+++ b/templates/index.html
@@ -144,7 +144,7 @@
         <span class="Avatar " style="background: rgb(208, 160, 229);">{{post.author_username|format_username}}</span>
         {%endif%}
       <ul class="DiscussionListItem-badges badges"></ul>
-      <a href="/post/{{post.id}}" class="DiscussionListItem-main">
+      <a href="/post/{{post.post_id}}" class="DiscussionListItem-main">
         <span class="DiscussionListItem-title">{{post.title}}</span>
         <ul class="DiscussionListItem-info">
           <li class="item-tags">
