--- a/templates/post.html
+++ b/templates/post.html
@@ -201,6 +201,7 @@
 
 {% block javascript %}
 <script src="{{static_path}}/js/dropload.min.js"></script>
+<script src="{{static_path}}/js/timeago.min.js"></script>
 
 <script type="text/javascript">
 $(function(){
@@ -231,7 +232,8 @@ $(function(){
             } else {
               avatar_text = '<span class="Avatar PostUser-avatar" style="background: rgb(208, 160, 229); text-transform: capitalize;">'+reply.author_username.substring(0,1)+'</span>';
             }
-            var reply_text = '<div class="PostStream-item" data-index="0" data-time="2016-04-27T00:34:10.000Z" data-number="1" data-id="23077" data-type="comment" style="display: block;"><article class="Post undefined CommentPost"><div><header class="Post-header"><ul><li class="item-user"><div class="PostUser"><h3><a href="/user/'+reply.author_username+'">'+avatar_text+'<span class="username">'+reply.author_username+'</span></a></h3><ul class="PostUser-badges badges"></ul></div></li><li class="item-meta"><div class="Dropdown PostMeta"><a class="Dropdown-toggle" data-toggle="dropdown"><time pubdate="true" datetime="2016-03-29T17:53:03+08:00" title="Tuesday, March 29, 2016 5:53 PM" data-humantime="true">29 Mar</time></a><div class="Dropdown-menu dropdown-menu"><span class="PostMeta-number">Post #6</span> <span class="PostMeta-time"><time pubdate="true" datetime="2016-03-29T17:53:03+08:00">Tuesday, March 29, 2016 5:53 PM</time></span> <span class="PostMeta-ip"></span><input class="FormControl PostMeta-permalink"></div></div><span class="item-index">#'+index+'</span></li></ul></header><div class="Post-body">'+reply.content+'</div><aside class="Post-actions"><ul><li class="item-like"><button class="Button Button--link" type="button" title="赞"><span class="Button-label">赞</span></button></li><li class="item-reply"><button class="Button Button--link" type="button" title="回复"><span class="Button-label">回复</span></button></li><li><div class="ButtonGroup Dropdown dropdown Post-controls itemCount1"><button class="Dropdown-toggle Button Button--icon Button--flat" data-toggle="dropdown"><i class="icon fa fa-fw fa-ellipsis-h Button-icon"></i><span class="Button-label"></span><i class="icon fa fa-fw fa-caret-down Button-caret"></i></button><ul class="Dropdown-menu dropdown-menu Dropdown-menu--right"><li class="item-flag"><button class=" hasIcon" type="button" title="举报"><i class="icon fa fa-fw fa-flag Button-icon"></i><span class="Button-label">举报</span></button></li></ul></div></li></ul></aside><footer class="Post-footer"><ul><li class="item-liked"><div class="Post-likedBy"><i class="icon fa fa-fw fa-thumbs-o-up "></i><a href="/u/ThnhMinhV"><span class="username">ThnhMinhV</span></a>, <a href="/u/datitisev"><span class="username">datitisev</span></a>, and <a href="/u/Franz"><span class="username">Franz</span></a> like this.</div></li><li class="item-replies"><div class="Post-mentionedBy"><span class="Post-mentionedBy-summary"><i class="icon fa fa-fw fa-reply "></i><a href="/d/2352-flarum-v0-1-0-beta-5-released/31" data-number="31"><span class="username">louisw128</span></a> replied to this.</span><ul class="Dropdown-menu Post-mentionedBy-preview fade"></ul></div></li></ul></footer></div></article></div>'
+            var created = new timeago(null, 'zh_CN').format(reply.created);
+            var reply_text = '<div class="PostStream-item" data-index="0" data-time="2016-04-27T00:34:10.000Z" data-number="1" data-id="'+reply.id+'" data-type="comment" style="display: block;"><article class="Post undefined CommentPost"><div><header class="Post-header"><ul><li class="item-user"><div class="PostUser"><h3><a href="/user/'+reply.author_username+'">'+avatar_text+'<span class="username">'+reply.author_username+'</span></a></h3><ul class="PostUser-badges badges"></ul></div></li><li class="item-meta"><div class="Dropdown PostMeta"><a class="Dropdown-toggle" data-toggle="dropdown"><time pubdate="true" datetime="'+reply.created+'" title="'+reply.created+'" data-humantime="true">'+created+'</time></a><div class="Dropdown-menu dropdown-menu"><span class="PostMeta-number">#'+index+' 楼</span> <span class="PostMeta-time"><time pubdate="true" datetime="'+reply.created+'">'+reply.created+'</time></span> <span class="PostMeta-ip"></span><input class="FormControl PostMeta-permalink"></div></div><span class="item-index">#'+index+'</span></li></ul></header><div class="Post-body">'+reply.content+'</div><aside class="Post-actions"><ul><li class="item-like"><button class="Button Button--link" type="button" title="赞"><span class="Button-label">赞</span></button></li><li class="item-reply"><button class="Button Button--link" type="button" title="回复"><span class="Button-label">回复</span></button></li><li><div class="ButtonGroup Dropdown dropdown Post-controls itemCount1"><button class="Dropdown-toggle Button Button--icon Button--flat" data-toggle="dropdown"><i class="icon fa fa-fw fa-ellipsis-h Button-icon"></i><span class="Button-label"></span><i class="icon fa fa-fw fa-caret-down Button-caret"></i></button><ul class="Dropdown-menu dropdown-menu Dropdown-menu--right"><li class="item-flag"><button class=" hasIcon" type="button" title="举报"><i class="icon fa fa-fw fa-flag Button-icon"></i><span class="Button-label">举报</span></button></li></ul></div></li></ul></aside><footer class="Post-footer"><ul><li class="item-liked"><div class="Post-likedBy"><i class="icon fa fa-fw fa-thumbs-o-up "></i><a href="/u/ThnhMinhV"><span class="username">ThnhMinhV</span></a>, <a href="/u/datitisev"><span class="username">datitisev</span></a>, and <a href="/u/Franz"><span class="username">Franz</span></a> like this.</div></li><li class="item-replies"><div class="Post-mentionedBy"><span class="Post-mentionedBy-summary"><i class="icon fa fa-fw fa-reply "></i><a href="/d/2352-flarum-v0-1-0-beta-5-released/31" data-number="31"><span class="username">louisw128</span></a> replied to this.</span><ul class="Dropdown-menu Post-mentionedBy-preview fade"></ul></div></li></ul></footer></div></article></div>'
               all_replys_text += reply_text;
             
         }
@@ -268,6 +270,10 @@ $(document).ready(function() {
     $('.Composer').addClass('normal'); 
     $('.Composer').addClass('visible');
     $('.Composer').css("display", "block");
+
+    $('html, body').animate({
+          scrollTop: $(document).height()
+        }, 1000);
   });
 
   $(document).on('click', '.ReplyPlaceholder', function() {
@@ -308,6 +314,18 @@ $(document).ready(function() {
             }
         });
   }); 
+
+
+  $(document).on('click', '.item-reply', function() {
+    $('.Composer').addClass('normal'); 
+    $('.Composer').addClass('visible');
+    $('.Composer').css("display", "block");
+
+    var item = $(this).parent().parent().parent().parent().parent();
+    var data_id = item.attr('data-id');
+    var username = item.find('.PostUser .username').text();
+    $('.Composer textarea').val('@'+username+'#'+data_id+' ');
+  });
 });
 </script>
 {% endblock %}
