--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,133 +2,134 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <title>游侠车迷社区</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
-    <meta name="theme-color" content="#E7672E">
-    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,600">
-    <style type="text/css" adt="123"></style>
-    <style type="text/css"></style>
-    <link rel="stylesheet" href="/static/css/font-awesome-4.6.3/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/static/css/forum-64c7858d.css">
-    <link rel="stylesheet" href="/static/css/main.css">{% block stylesheet %}{% endblock %}</head>
+  <meta charset="utf-8">
+  <title>游侠车迷社区</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
+  <meta name="theme-color" content="#E7672E">
+  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,600">
+  <style type="text/css" adt="123"></style>
+  <style type="text/css"></style>
+  <link rel="stylesheet" href="/static/css/font-awesome-4.6.3/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/static/css/forum-64c7858d.css">
+  <link rel="stylesheet" href="/static/css/main.css">{% block stylesheet %}{% endblock %}</head>
 
 <body class="no-touch">
-    <div id="app" class="App affix {{page_name}}" style="min-height: 775px;">
-        <div id="app-navigation" class="App-navigation">
-            <div class="Navigation ButtonGroup App-backControl">
-                <button class="Button Button--icon Navigation-drawer hasIcon" type="button"> <i class="icon fa fa-fw fa-reorder Button-icon"></i>
-                </button>
-            </div>
+  <div id="app" class="App affix {{page_name}}" style="min-height: 775px;">
+    <div id="app-navigation" class="App-navigation">
+      <div class="Navigation ButtonGroup App-backControl">
+        <button class="Button Button--icon Navigation-drawer hasIcon" type="button"> <i class="icon fa fa-fw fa-reorder Button-icon"></i>
+        </button>
+      </div>
+    </div>
+    <div id="drawer" class="App-drawer">
+      <header id="header" class="App-header">
+        <div id="header-navigation" class="Header-navigation">
+          <div class="Navigation ButtonGroup "></div>
         </div>
-        <div id="drawer" class="App-drawer">
-            <header id="header" class="App-header">
-                <div id="header-navigation" class="Header-navigation">
-                    <div class="Navigation ButtonGroup "></div>
-                </div>
-                <div class="container">
-                    <h1 class="Header-title">
+        <div class="container">
+          <h1 class="Header-title">
             <a href="/" id="home-link">
               <img src="https://discuss.flarum.org/assets/header.png" alt="" height="27"></a>
           </h1>
-                    <div class="Header-primary">
-                        <ul class="Header-controls">
-                            <li>
-                                <a href="/" class="Button Button--link">首页</a>
-                            </li>
-                            <li>
-                                <a href="http://discuss.flarum.org/d/859-flarum-community-guidelines" class="Button Button--link">车评</a>
-                            </li>
-                            <li>
-                                <a href="http://flarum.org/docs/faq" class="Button Button--link">好店</a>
-                            </li>
-                            <li>
-                                <a href="https://gitter.im/flarum/flarum" class="Button Button--link" target="_blank">值得买</a>
-                            </li>
-                            <li>
-                                <a href="http://flarum.org/docs/contributing" class="Button Button--link" target="_blank">社区</a>
-                            </li>
-                        </ul>
-                        <div id="header-primary">
-                            <ul class="Header-controls"></ul>
-                        </div>
-                    </div>
-                    <div id="header-secondary" class="Header-secondary">
-                        <ul class="Header-controls">
-                            <li class="item-search">
-                                <div class="Search ">
-                                    <div class="Search-input">
-                                        <input class="FormControl" placeholder="搜索">
-                                    </div>
-                                    <ul class="Dropdown-menu Search-results"></ul>
-                                </div>
-                            </li>
-                            <li class="item-notifications">
-                                <div class="ButtonGroup Dropdown dropdown NotificationsDropdown itemCount0">
-                                    <button class="Dropdown-toggle Button Button--flat" data-toggle="dropdown" title="消息"> <i class="icon fa fa-fw fa-bell Button-icon"></i>
-                                        <span class="Button-label">消息</span>
-                                    </button>
-                                    <div class="Dropdown-menu Dropdown-menu--right"></div>
-                                </div>
-                            </li>
-                            {%if user_info%}
-                            <li class="item-session">
-                                <div class="ButtonGroup Dropdown dropdown SessionDropdown itemCount4">
-                                    <button class="Dropdown-toggle Button Button--user Button--flat" data-toggle="dropdown">
-                                        {%if user_info.avatar%}
-                                        <img class="Avatar " src="{{user_info.avatar}}"> {%else%}
-                                        <span class="Avatar " style="background: rgb(208, 160, 229);">{{user_info.username|format_username}}</span> {%endif%}
-                                        <span class="Button-label">
-                      <span class="username">{{user_info.username}}</span>
-                                        </span>
-                                    </button>
-                                    <ul class="Dropdown-menu dropdown-menu Dropdown-menu--right">
-                                        <li class="item-profile">
-                                            <a href="/user/{{user_info.username}}" active="false" class=" hasIcon" type="button" title="Profile">
-                                                <i class="icon fa fa-fw fa-user Button-icon"></i>
-                                                <span class="Button-label">我的主页</span>
-                                            </a>
-                                        </li>
-                                        <li class="item-settings">
-                                            <a href="/settings" active="false" class=" hasIcon" type="button" title="Settings">
-                                                <i class="icon fa fa-fw fa-cog Button-icon"></i>
-                                                <span class="Button-label">设置</span>
-                                            </a>
-                                        </li>
-                                        <li class="Dropdown-separator"></li>
-                                        <li class="item-logOut">
-                                            <a href="/signout" class=" hasIcon" type="button" title="登出">
-                                                <i class="icon fa fa-fw fa-sign-out Button-icon"></i>
-                                                <span class="Button-label">登出</span>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </li>
-                            {%else%}
-                            <li class="item-signUp signUp">
-                                <button class="Button Button--link" type="button" title="注册">
-                                    <span class="Button-label">注册</span>
-                                </button>
-                            </li>
-                            <li class="item-logIn logIn">
-                                <button class="Button Button--link" type="button" title="登录">
-                                    <span class="Button-label">登录</span>
-                                </button>
-                            </li>
-                            {%endif%}
-                        </ul>
-                    </div>
+          <div class="Header-primary">
+            <ul class="Header-controls">
+              <li>
+                <a href="/" class="Button Button--link">首页</a>
+              </li>
+              <li>
+                <a href="http://discuss.flarum.org/d/859-flarum-community-guidelines" class="Button Button--link">车评</a>
+              </li>
+              <li>
+                <a href="http://flarum.org/docs/faq" class="Button Button--link">好店</a>
+              </li>
+              <li>
+                <a href="https://gitter.im/flarum/flarum" class="Button Button--link" target="_blank">值得买</a>
+              </li>
+              <li>
+                <a href="http://flarum.org/docs/contributing" class="Button Button--link" target="_blank">社区</a>
+              </li>
+            </ul>
+            <div id="header-primary">
+              <ul class="Header-controls"></ul>
+            </div>
+          </div>
+          <div id="header-secondary" class="Header-secondary">
+            <ul class="Header-controls">
+              <li class="item-search">
+                <div class="Search ">
+                  <div class="Search-input">
+                    <input class="FormControl" placeholder="搜索"></div>
+                  <ul class="Dropdown-menu Search-results"></ul>
                 </div>
-            </header>
+              </li>
+              <li class="item-notifications">
+                <div class="ButtonGroup Dropdown dropdown NotificationsDropdown itemCount0">
+                  <button class="Dropdown-toggle Button Button--flat" data-toggle="dropdown" title="消息"> <i class="icon fa fa-fw fa-bell Button-icon"></i>
+                    <span class="Button-label">消息</span>
+                  </button>
+                  <div class="Dropdown-menu Dropdown-menu--right"></div>
+                </div>
+              </li>
+              {%if user_info%}
+              <li class="item-session">
+                <div class="ButtonGroup Dropdown dropdown SessionDropdown itemCount4">
+                  <button class="Dropdown-toggle Button Button--user Button--flat" data-toggle="dropdown">
+                    {%if user_info.avatar%}
+                    <img class="Avatar " src="{{user_info.avatar}}">
+                    {%else%}
+                    <span class="Avatar " style="background: rgb(208, 160, 229);">{{user_info.username|format_username}}</span>
+                    {%endif%}
+                    <span class="Button-label">
+                      <span class="username">{{user_info.username}}</span>
+                    </span>
+                  </button>
+                  <ul class="Dropdown-menu dropdown-menu Dropdown-menu--right">
+                    <li class="item-profile">
+                      <a href="/user/{{user_info.username}}" active="false" class=" hasIcon" type="button" title="Profile">
+                        <i class="icon fa fa-fw fa-user Button-icon"></i>
+                        <span class="Button-label">我的主页</span>
+                      </a>
+                    </li>
+                    <li class="item-settings">
+                      <a href="/settings" active="false" class=" hasIcon" type="button" title="Settings">
+                        <i class="icon fa fa-fw fa-cog Button-icon"></i>
+                        <span class="Button-label">设置</span>
+                      </a>
+                    </li>
+                    <li class="Dropdown-separator"></li>
+                    <li class="item-logOut">
+                      <a href="/signout" class=" hasIcon" type="button" title="登出">
+                        <i class="icon fa fa-fw fa-sign-out Button-icon"></i>
+                        <span class="Button-label">登出</span>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </li>
+              {%else%}
+              <li class="item-signUp signUp">
+                <button class="Button Button--link" type="button" title="注册">
+                  <span class="Button-label">注册</span>
+                </button>
+              </li>
+              <li class="item-logIn logIn">
+                <button class="Button Button--link" type="button" title="登录">
+                  <span class="Button-label">登录</span>
+                </button>
+              </li>
+              {%endif%}
+            </ul>
+          </div>
         </div>
-        {% block main %}{% endblock %}
+      </header>
     </div>
-    {% block modal %}{% endblock %}
-    <script src="/static/js/jquery-2.1.1.min.js"></script>
-    <script src="/static/bootstrap-3.2.0-dist/js/bootstrap.min.js"></script>
-    <script type="text/javascript">
+    {% block main %}{% endblock %}
+  </div>
+  {% block modal %}{% endblock %}
+  <script src="/static/js/jquery-2.1.1.min.js"></script>
+  <script src="/static/bootstrap-3.2.0-dist/js/bootstrap.min.js"></script>
+  <script type="text/javascript">
     $(document).ready(function() {
         $(document).on('click', '.normal .item-fullScreen', function() {
             $('.Composer').removeClass('normal');
@@ -191,7 +192,7 @@
 
     });
     </script>
-    {% block javascript %}{% endblock %}
+  {% block javascript %}{% endblock %}
 </body>
 
 </html>
