--- a/static/css/main.css
+++ b/static/css/main.css
@@ -47,5 +47,8 @@ h2 {
 .Composer-flexible:focus {
         border-color: transparent;
 }
-
+.liked button{
+	color: #f36322;
+	cursor:text;
+}
     
