--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,6 @@
-{% extends 'layout.html' %} {% block stylesheet %} {% endblock %} {% block main %}
+{% extends 'layout.html' %} 
+{% block title %}游侠车迷社区{% endblock %}
+{% block stylesheet %} {% endblock %} {% block main %}
 <main class="App-content">
   <div id="content" style="padding-bottom: 0px;">
     <div class="IndexPage">
