--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>游侠车迷社区</title>
+  <title>{% block title %}{% endblock %}</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
   <meta name="theme-color" content="#E7672E">
