--- a/templates/post.html
+++ b/templates/post.html
@@ -1,4 +1,6 @@
-{% extends 'layout.html' %} {% block stylesheet %} {% endblock %} {% block main %}
+{% extends 'layout.html' %} 
+{% block title %}{{post.title}}- 游侠{% endblock %}
+{% block stylesheet %} {% endblock %} {% block main %}
 <main class="App-content">
   <div id="content" style="padding-bottom: 0px;">
     <div class="DiscussionPage">
@@ -403,14 +405,20 @@ $(function() {
                         }
                         var like_users_text = '';
                         if (reply.like_users) {
-                            like_users_text = '<li class="item-liked"><div class="Post-likedBy"><i class="icon fa fa-fw fa-thumbs-o-up "></i><a href="/user/' + reply.like_users + '"><span class="username">' + reply.like_users + '</span></a> 赞了它.</div></li>'
+                            like_users_text = '<li class="item-liked"><div class="Post-likedBy"><i class="icon fa fa-fw fa-thumbs-o-up "></i><a href="/user/' + reply.like_users + '"><span class="username">' + reply.like_users + '</span></a> 赞了它.</div></li>';
                         }
                         var reply_users_text = '';
                         if (reply.reply_users) {
-                            reply_users_text = '<li class="item-replies"><div class="Post-mentionedBy"><span class="Post-mentionedBy-summary"><i class="icon fa fa-fw fa-reply "></i><a href="/post/{{post.post_id}}?reply=' + index + '" data-number="31"><span class="username">' + reply.reply_users + '</span></a> 回复了它.</span><ul class="Dropdown-menu Post-mentionedBy-preview fade"></ul></div></li>'
+                            reply_users_text = '<li class="item-replies"><div class="Post-mentionedBy"><span class="Post-mentionedBy-summary"><i class="icon fa fa-fw fa-reply "></i><a href="/post/{{post.post_id}}?reply=' + index + '" data-number="31"><span class="username">' + reply.reply_users + '</span></a> 回复了它.</span><ul class="Dropdown-menu Post-mentionedBy-preview fade"></ul></div></li>';
+                        }
+                        var like_button = '';
+                        if (reply.like_id) {
+                          like_button = '<li class="item-like liked"><button class="Button Button--link" type="button" title="已赞"><span class="Button-label">已赞</span></button></li>';
+                        } else {
+                          like_button = '<li class="item-like"><button class="Button Button--link" type="button" title="赞"><span class="Button-label">赞</span></button></li>';
                         }
                         var created = new timeago(null, 'zh_CN').format(reply.created);
-                        var reply_text = '<div class="PostStream-item" data-index="' + index + '" data-time="' + reply.created + '" data-number="' + index + '" data-id="' + reply.id + '" data-type="comment" style="display: block;"><article class="Post undefined CommentPost"><div><header class="Post-header"><ul><li class="item-user"><div class="PostUser"><h3><a href="/user/' + reply.author_username + '">' + avatar_text + '<span class="username">' + reply.author_username + '</span></a></h3><ul class="PostUser-badges badges"></ul></div></li><li class="item-meta"><div class="Dropdown PostMeta"><a class="Dropdown-toggle" data-toggle="dropdown"><time pubdate="true" datetime="' + reply.created + '" title="' + reply.created + '" data-humantime="true">' + created + '</time></a><div class="Dropdown-menu dropdown-menu"><span class="PostMeta-number">#' + index + ' 楼</span> <span class="PostMeta-time"><time pubdate="true" datetime="' + reply.created + '">' + reply.created + '</time></span> <span class="PostMeta-ip"></span><input class="FormControl PostMeta-permalink"></div></div><span class="item-index">#' + index + '</span></li></ul></header><div class="Post-body">' + reply.content + '</div><aside class="Post-actions"><ul><li class="item-like"><button class="Button Button--link" type="button" title="赞"><span class="Button-label">赞</span></button></li><li class="item-reply"><button class="Button Button--link" type="button" title="回复"><span class="Button-label">回复</span></button></li><li><div class="ButtonGroup Dropdown dropdown Post-controls itemCount1"><button class="Dropdown-toggle Button Button--icon Button--flat" data-toggle="dropdown"><i class="icon fa fa-fw fa-ellipsis-h Button-icon"></i><span class="Button-label"></span><i class="icon fa fa-fw fa-caret-down Button-caret"></i></button><ul class="Dropdown-menu dropdown-menu Dropdown-menu--right"><li class="item-flag"><button class=" hasIcon" type="button" title="举报"><i class="icon fa fa-fw fa-flag Button-icon"></i><span class="Button-label">举报</span></button></li></ul></div></li></ul></aside><footer class="Post-footer"><ul>' + like_users_text + reply_users_text + '</ul></footer></div></article></div>'
+                        var reply_text = '<div class="PostStream-item" data-index="' + index + '" data-time="' + reply.created + '" data-number="' + index + '" data-id="' + reply.id + '" data-type="comment" style="display: block;"><article class="Post undefined CommentPost"><div><header class="Post-header"><ul><li class="item-user"><div class="PostUser"><h3><a href="/user/' + reply.author_username + '">' + avatar_text + '<span class="username">' + reply.author_username + '</span></a></h3><ul class="PostUser-badges badges"></ul></div></li><li class="item-meta"><div class="Dropdown PostMeta"><a class="Dropdown-toggle" data-toggle="dropdown"><time pubdate="true" datetime="' + reply.created + '" title="' + reply.created + '" data-humantime="true">' + created + '</time></a><div class="Dropdown-menu dropdown-menu"><span class="PostMeta-number">#' + index + ' 楼</span> <span class="PostMeta-time"><time pubdate="true" datetime="' + reply.created + '">' + reply.created + '</time></span> <span class="PostMeta-ip"></span><input class="FormControl PostMeta-permalink"></div></div><span class="item-index">#' + index + '</span></li></ul></header><div class="Post-body">' + reply.content + '</div><aside class="Post-actions"><ul>'+like_button+'<li class="item-reply"><button class="Button Button--link" type="button" title="回复"><span class="Button-label">回复</span></button></li><li><div class="ButtonGroup Dropdown dropdown Post-controls itemCount1"><button class="Dropdown-toggle Button Button--icon Button--flat" data-toggle="dropdown"><i class="icon fa fa-fw fa-ellipsis-h Button-icon"></i><span class="Button-label"></span><i class="icon fa fa-fw fa-caret-down Button-caret"></i></button><ul class="Dropdown-menu dropdown-menu Dropdown-menu--right"><li class="item-flag"><button class=" hasIcon" type="button" title="举报"><i class="icon fa fa-fw fa-flag Button-icon"></i><span class="Button-label">举报</span></button></li></ul></div></li></ul></aside><footer class="Post-footer"><ul>' + like_users_text + reply_users_text + '</ul></footer></div></article></div>';
                         all_replys_text += reply_text;
 
                     }
@@ -537,6 +545,7 @@ $(document).ready(function() {
           if (data.success == 1) {
               item_like.find('span').text('已赞');
               item_like.addClass('liked');
+              item.find('footer ul').append('<li class="item-liked"><div class="Post-likedBy"><i class="icon fa fa-fw fa-thumbs-o-up "></i><a href="/user/{{user_info.username}}"><span class="username">你</span></a> 赞了它.</div></li>');
           } else {
             alert('error');
           }
