--- a/templates/post.html
+++ b/templates/post.html
@@ -8,7 +8,7 @@
         <div class="container">
           <nav class="DiscussionPage-nav">
             <ul>
-              <li class="item-controls">
+              <li class="item-controls {%if not user_info%}logIn{%endif%}">
                 <div class="ButtonGroup Dropdown dropdown App-primaryControl Dropdown--split itemCount1">
                   <button class=" SplitDropdown-button Button Button--primary hasIcon" type="button" title="回复"> <i class="icon fa fa-fw fa-reply Button-icon"></i>
                     <span class="Button-label">回复</span>
@@ -26,7 +26,7 @@
                   </ul>
                 </div>
               </li>
-              <li class="item-subscription">
+              <li class="item-subscription {%if not user_info%}logIn{%endif%}">
                 <div class="Dropdown ButtonGroup SubscriptionMenu">
                   <button class="Button SubscriptionMenu-button SubscriptionMenu-button--false hasIcon" title="" type="button" data-original-title="Get an email when there are new posts">
                     <i class="icon fa fa-fw fa-star-o Button-icon"></i>
@@ -130,12 +130,12 @@
                     <div class="Post-body">{{post.content}}</div>
                     <aside class="Post-actions">
                       <ul>
-                        <li class="item-like {%if post.like_id%}liked{%endif%}">
+                        <li class="item-like {%if post.like_id%}liked{%endif%} {%if not user_info%}logIn{%endif%}">
                           <button class="Button Button--link" type="button" title="{%if post.like_id%}已赞{%else%}赞{%endif%}">
                             <span class="Button-label">{%if post.like_id%}已赞{%else%}赞{%endif%}</span>
                           </button>
                         </li>
-                        <li class="item-reply">
+                        <li class="item-reply {%if not user_info%}logIn{%endif%}">
                           <button class="Button Button--link" type="button" title="回复">
                             <span class="Button-label">回复</span>
                           </button>
@@ -148,7 +148,7 @@
                               <i class="icon fa fa-fw fa-caret-down Button-caret"></i>
                             </button>
                             <ul class="Dropdown-menu dropdown-menu Dropdown-menu--right">
-                              <li class="item-flag">
+                              <li class="item-flag {%if not user_info%}logIn{%endif%}">
                                 <button class=" hasIcon" type="button" title="举报">
                                   <i class="icon fa fa-fw fa-flag Button-icon"></i>
                                   <span class="Button-label">举报</span>
@@ -164,10 +164,7 @@
                         {%if post.like_users%}
                         <li class="item-liked">
                           <div class="Post-likedBy">
-                            <i class="icon fa fa-fw fa-thumbs-o-up "></i>
-                            <a href="/user/{{post.like_user}}">
-                              <span class="username">{{post.like_user}}</span>
-                            </a>
+                            <i class="icon fa fa-fw fa-thumbs-o-up "></i><a href="/user/{{post.like_user}}"><span class="username">{{post.like_users}}</span></a>
                             赞了它.
                           </div>
                         </li>
@@ -256,9 +253,9 @@
               </div>
               <div class="ReplyList"></div>
               <div class="PostStream-item">
-                <article class="Post ReplyPlaceholder">
+                <article class="Post ReplyPlaceholder {%if not user_info%}logIn{%endif%}">
                   <header class="Post-header">
-                    <span class="Avatar PostUser-avatar" style="background: rgb(160, 176, 229);">{{user_info.username|format_username}}</span>
+                    <span class="Avatar PostUser-avatar" {%if user_info%}style="background: rgb(160, 176, 229);"{%endif%}>{%if user_info%}{{user_info.username|format_username}}{%endif%}</span>
                     回复一发...
                   </header>
                 </article>
@@ -294,7 +291,7 @@
           </ul>
           <div class="Composer-content">
             <div class="ComposerBody ">
-              <span class="Avatar ComposerBody-avatar" style="background: rgb(160, 176, 229);">{{user_info.username|format_username}}</span>
+              <span class="Avatar ComposerBody-avatar" {%if user_info%}style="background: rgb(160, 176, 229);"{%endif%}>{%if user_info%}{{user_info.username|format_username}}{%endif%}</span>
               <div class="ComposerBody-content">
                 <ul class="ComposerBody-header">
                   <li class="item-title">
@@ -410,12 +407,12 @@ $(function() {
                         }
                         var like_button = '';
                         if (reply.like_id) {
-                          like_button = '<li class="item-like liked"><button class="Button Button--link" type="button" title="已赞"><span class="Button-label">已赞</span></button></li>';
+                          like_button = '<li class="item-like liked {%if not user_info%}logIn{%endif%}"><button class="Button Button--link" type="button" title="已赞"><span class="Button-label">已赞</span></button></li>';
                         } else {
-                          like_button = '<li class="item-like"><button class="Button Button--link" type="button" title="赞"><span class="Button-label">赞</span></button></li>';
+                          like_button = '<li class="item-like {%if not user_info%}logIn{%endif%}"><button class="Button Button--link" type="button" title="赞"><span class="Button-label">赞</span></button></li>';
                         }
                         var created = new timeago(null, 'zh_CN').format(reply.created);
-                        var reply_text = '<div class="PostStream-item" data-index="' + index + '" data-time="' + reply.created + '" data-number="' + index + '" data-id="' + reply.id + '" data-type="comment" style="display: block;"><article class="Post undefined CommentPost"><div><header class="Post-header"><ul><li class="item-user"><div class="PostUser"><h3><a href="/user/' + reply.author_username + '">' + avatar_text + '<span class="username">' + reply.author_username + '</span></a></h3><ul class="PostUser-badges badges"></ul></div></li><li class="item-meta"><div class="Dropdown PostMeta"><a class="Dropdown-toggle" data-toggle="dropdown"><time pubdate="true" datetime="' + reply.created + '" title="' + reply.created + '" data-humantime="true">' + created + '</time></a><div class="Dropdown-menu dropdown-menu"><span class="PostMeta-number">#' + index + ' 楼</span> <span class="PostMeta-time"><time pubdate="true" datetime="' + reply.created + '">' + reply.created + '</time></span> <span class="PostMeta-ip"></span><input class="FormControl PostMeta-permalink"></div></div><span class="item-index">#' + index + '</span></li></ul></header><div class="Post-body">' + reply.content + '</div><aside class="Post-actions"><ul>'+like_button+'<li class="item-reply"><button class="Button Button--link" type="button" title="回复"><span class="Button-label">回复</span></button></li><li><div class="ButtonGroup Dropdown dropdown Post-controls itemCount1"><button class="Dropdown-toggle Button Button--icon Button--flat" data-toggle="dropdown"><i class="icon fa fa-fw fa-ellipsis-h Button-icon"></i><span class="Button-label"></span><i class="icon fa fa-fw fa-caret-down Button-caret"></i></button><ul class="Dropdown-menu dropdown-menu Dropdown-menu--right"><li class="item-flag"><button class=" hasIcon" type="button" title="举报"><i class="icon fa fa-fw fa-flag Button-icon"></i><span class="Button-label">举报</span></button></li></ul></div></li></ul></aside><footer class="Post-footer"><ul>' + like_users_text + reply_users_text + '</ul></footer></div></article></div>';
+                        var reply_text = '<div class="PostStream-item" data-index="' + index + '" data-time="' + reply.created + '" data-number="' + index + '" data-id="' + reply.id + '" data-type="comment" style="display: block;"><article class="Post undefined CommentPost"><div><header class="Post-header"><ul><li class="item-user"><div class="PostUser"><h3><a href="/user/' + reply.author_username + '">' + avatar_text + '<span class="username">' + reply.author_username + '</span></a></h3><ul class="PostUser-badges badges"></ul></div></li><li class="item-meta"><div class="Dropdown PostMeta"><a class="Dropdown-toggle" data-toggle="dropdown"><time pubdate="true" datetime="' + reply.created + '" title="' + reply.created + '" data-humantime="true">' + created + '</time></a><div class="Dropdown-menu dropdown-menu"><span class="PostMeta-number">#' + index + ' 楼</span> <span class="PostMeta-time"><time pubdate="true" datetime="' + reply.created + '">' + reply.created + '</time></span> <span class="PostMeta-ip"></span><input class="FormControl PostMeta-permalink"></div></div><span class="item-index">#' + index + '</span></li></ul></header><div class="Post-body">' + reply.content + '</div><aside class="Post-actions"><ul>'+like_button+'<li class="item-reply {%if not user_info%}logIn{%endif%}"><button class="Button Button--link" type="button" title="回复"><span class="Button-label">回复</span></button></li><li><div class="ButtonGroup Dropdown dropdown Post-controls itemCount1"><button class="Dropdown-toggle Button Button--icon Button--flat" data-toggle="dropdown"><i class="icon fa fa-fw fa-ellipsis-h Button-icon"></i><span class="Button-label"></span><i class="icon fa fa-fw fa-caret-down Button-caret"></i></button><ul class="Dropdown-menu dropdown-menu Dropdown-menu--right"><li class="item-flag {%if not user_info%}logIn{%endif%}"><button class=" hasIcon" type="button" title="举报"><i class="icon fa fa-fw fa-flag Button-icon"></i><span class="Button-label">举报</span></button></li></ul></div></li></ul></aside><footer class="Post-footer"><ul>' + like_users_text + reply_users_text + '</ul></footer></div></article></div>';
                         all_replys_text += reply_text;
 
                     }
@@ -442,6 +439,8 @@ $(function() {
 });
 
 $(document).ready(function() {
+    
+    {%if user_info%}
     $(document).on('click', '.item-flag', function() {
         var modal = '<div class="Modal modal-dialog FlagPostModal Modal--small"><div class="Modal-content"><div class="Modal-close App-backControl"><button class="Button Button--icon Button--link hasIcon" type="button"><i class="icon fa fa-fw fa-times Button-icon"></i></button></div><form><div class="Modal-header"><h3 class="App-titleControl App-titleControl--text">Flag Post</h3></div><div class="Modal-alert"></div><div class="Modal-body"><div class="Form Form--centered"><div class="Form-group"><div><label class="checkbox"><input type="radio" name="reason" value="off_topic"><strong>Off-topic</strong>This post is not relevant to the current discussion and should be moved elsewhere.</label><label class="checkbox"><input type="radio" name="reason" value="inappropriate"><strong>Inappropriate</strong>This post is offensive, abusive, or violates our <a>community guidelines</a>.</label><label class="checkbox"><input type="radio" name="reason" value="spam"><strong>Spam</strong>This post is an advertisement.</label><label class="checkbox"><input type="radio" name="reason" value="other"><strong>Other</strong></label></div></div><div class="Form-group"><button class="Button Button--primary Button--block disabled" type="submit" disabled="" title="Flag Post"><span class="Button-label">Flag Post</span></button></div></div></div></form></div></div>';
         $('.ModalManager').html(modal);
@@ -463,6 +462,7 @@ $(document).ready(function() {
         $('.Composer').addClass('visible');
         $('.Composer').css("display", "block");
     });
+
     $(document).on('click', '.item-submit', function() {
         $('.ComposerBody-loading').addClass('active');
         var content = $('.Composer-flexible').html();
@@ -548,6 +548,7 @@ $(document).ready(function() {
           }
         });
     });
+    {%endif%}
 
     
 });
