--- a/templates/layout.html
+++ b/templates/layout.html
@@ -30,7 +30,7 @@
         <div class="container">
           <h1 class="Header-title">
             <a href="/" id="home-link">
-              <img src="https://discuss.flarum.org/assets/header.png" alt="" height="27"></a>
+              <img src="/static/img/header.png" alt="" height="27"></a>
           </h1>
           <div class="Header-primary">
             <ul class="Header-controls">
